--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -140,6 +140,10 @@
                             <i class="bi bi-person-plus me-2"></i>
                             Crear Cuenta
                         </a>
+                        <a href="https://github.com/gdlizarraga/coderhouse-backend2-entrega/blob/main/README.md" class="btn btn-lg px-4 shadow" style="background-color: transparent; color: #ffffff; border: 2px solid #ffffff; font-weight: 600;" target="_blank">
+                            <i class="bi bi-book me-2"></i>
+                            README Sistema (en GIT)
+                        </a>
                     </div>
                 </div>
             </div>
