--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -179,6 +179,16 @@
                 </li>
               {{else}}
                 <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    target="_blank"
+                    href="https://github.com/gdlizarraga/coderhouse-backend2-entrega/blob/main/README.md"
+                  >
+                    <i class="bi bi-book me-1"></i>
+                    README Sistema (en GIT)
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/login">
                     <i class="bi bi-box-arrow-in-right me-1"></i>
                     Iniciar Sesión
@@ -213,7 +223,7 @@
                 Backend II - Primer Entrega</p>
             </div>
             <div class="col-md-6 text-end">
-              <small class="text-muted">
+              <small class="text-muted" style="color: #FFF !important;">
                 Desarrollado con Node.js, Express y MongoDB
               </small>
             </div>
