--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -74,6 +74,12 @@
                 Iniciar Sesión
               </button>
             </div>
+
+            <div class="text-center mb-3">
+              <a href="/forgot-password" class="text-decoration-none">
+                <small>¿Olvidaste tu contraseña?</small>
+              </a>
+            </div>
           </form>
 
           <hr />
