--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -10,6 +10,7 @@
         </div>
         <div class="card-body p-4">
           <form id="registerForm">
+            <input type="hidden" name="role" value="user" />
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="first_name" class="form-label">
